fixes for roster shift

--- a/src/app/pages/sub-admin/roster-shifts/roster-shifts.component.css
+++ b/src/app/pages/sub-admin/roster-shifts/roster-shifts.component.css
@@ -2,12 +2,13 @@
     width: 12%;
     padding-left: 15px;
 }
-.name 
-{
+
+.name {
     width: 21% !important;
-    text-align: left ;   
+    text-align: left;
 }
-.headerBtn {    
+
+.headerBtn {
     margin-left: 70%;
 }
 
@@ -19,6 +20,7 @@
     width: 13%;
     float: left;
 }
+
 .page_header {
     background-color: #e4e4e4;
     padding-top: 0.5%;
@@ -32,7 +34,8 @@
     margin-left: 1%;
     margin-right: 1%;
 }
-.uploadXl{
+
+.uploadXl {
     float: left;
 }
 
@@ -43,31 +46,31 @@
     line-height: 1.42857143;
     vertical-align: top;
 }
+
 .empCode {
     white-space: pre-line;
     font-size: 12px;
     color: #919191;
- }
- 
- .customStyle {
+}
+
+.customStyle {
     padding-left: 10px !important;
- }
- 
- .previousShiftBorder
- {
+}
+
+.previousShiftBorder {
     background-color: #f2f2f2;
+    filter: alpha(opacity=10);
     width: 100%;
     border: 1px solid #95989A;
     padding: 4px;
     padding-left: 10px;
     height: 32px;
-    border-right: hidden;    
-    -webkit-bottom-left-radius: 5px !important;
+    border-right: hidden;
+    border-left-style: dashed;
+    /* -webkit-bottom-left-radius: 5px !important;
     -moz-bottom-left-radius: 5px !important;
     border-bottom-left-radius: 5px !important;
- 
     -webkit-top-left-radius: 5px !important;
     -moz-top-left-radius: 5px !important;
-    border-top-left-radius: 5px !important;
- }
-
+    border-top-left-radius: 5px !important; */
+}
